# Retriable-Kafka-Client

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compose.yml  pyproject.toml  tox.ini
.github/workflows/: integration.yml  release.yml  tag.yml  test.yml
kafka_config/: kafka-startup.sh  kafka_server_jaas.conf
src/retriable_kafka_client/: __init__.py  chunking.py  config.py  consumer.py  consumer_tracking.py  error.py  headers.py  health.py  kafka_settings.py  kafka_utils.py  offset_cache.py  orchestrate.py  producer.py  retry_utils.py  types.py
tests/: __init__.py  test_consumer.py  test_orchestrate.py
tests/integration/: README.md  conftest.py  integration_utils.py  test_chunking.py  test_health.py  test_kafka_integration.py  test_large.py  test_lost_chunk_recover.py  test_multiple_topics.py  test_producer.py  test_rebalance.py  test_reconnection.py  test_retry.py  test_user_function_filter.py
tests/unit/: test_chunking.py  test_consumer.py  test_consumer_tracking.py  test_health.py  test_offset_cache.py  test_orchestrate.py  test_producer.py  test_retry_utils.py
