[project]
name = "retriable-kafka-client"
version = "0.2.0"
description = "Kafka client library based on confluent-kafka with retry functionality"
authors = [
    {name = "Marek Szymutko", email = "mszymutk@redhat.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.2",
    "pylint>=4.0.4",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "tox>=4.32.0",
    "types-confluent-kafka>=1.4.0",
]
