[project]
name = "retriable-kafka-client"
version = "0.2.0"
description = "Kafka client library based on confluent-kafka with retry functionality"
authors = [
    {name = "Marek Szymutko", email = "mszymutk@redhat.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka==2.13.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "tox>=4.30.3",
    "types-confluent-kafka>=1.4.0",
]
